# full-stack-fastapi-template

./: docker-compose.override.yml  main.py  pyproject.toml  pytest.ini
backend/: .gitignore  pyproject.toml
backend/tests/: .gitignore  conftest.py  pytest.ini
backend/tests/api/clients/: items.py  users.py
backend/tests/api/tests/: test_api_items.py  test_api_users.py
backend/tests/clients/: login.py  users.py
backend/tests/components/: delete_user.py  items.py  login.py  signup.py  user_setting.py
backend/tests/testing/utils/: client.py
backend/tests/tests/: test_api_items.py  test_delete_account.py  test_items.py  test_login.py  utils.py
backend/tests/tests/api/: utils.py
backend/tests/tests/api/clients/: items.py  users.py
backend/tests/tests/api_tests/: get_request  requests.py  test_api_users.py  users.py
backend/tests/tests/ui/: test_delete_account.py  test_login.py  test_signup.py  test_user_setting.py
backend/tests/tests/ui_tests/: test_delete_account.py  test_items.py  test_login.py  test_signup.py
backend/tests/ui/components/: delete_user.py  items.py  login.py  test_login.py  test_user_setting.py
backend/tests/ui/tests/: conftest.py
backend/tests/utils/: client.py  configuration.py
backend/ui tests/: conftest.py
backend/ui tests/components/: signup.py
backend/ui_tests/: conftest.py
backend/ui_tests/components/: delete_user.py  items.py  login.py  signup.py  user_setting.py
backend/ui_tests/data/: users.py
backend/ui_tests/tests/: test_delete_account.py  test_items.py  test_login.py  test_signup.py  test_user_setting.py
(+4 files in other folders)
